<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_discover"
        android:icon="@drawable/ic_discover_bn"
        android:title="@string/discover"
        />

    <item
        android:id="@+id/item_book_open"
        android:icon="@drawable/ic_book_open"
        android:title="@string/book"
        />

    <item
        android:id="@+id/item_cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart"
        />

    <item
        android:id="@+id/item_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favourites"
        />

    <item
        android:id="@+id/item_account_settings"
        android:icon="@drawable/ic_account_settings"
        android:title="@string/settings"
        />
</menu>